fix dark mode css details

--- a/css/default.css
+++ b/css/default.css
@@ -13,6 +13,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (prefers-color-scheme: dark) {
-	background: #000;
-	color: #ccc
+	body {
+		background: #000;
+		color: #ccc
+	}
 }
